[package]
name = "tiktok-streak-saver"
version = "1.0.0"
edition = "2021"
description = "TikTok streak saver bot with a beautiful TUI"
license = "MIT"

[[bin]]
name = "tiktok-streak-saver"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
thirtyfour = { version = "0.35", default-features = false, features = ["reqwest", "native-tls", "component"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
chrono = "0.4"
anyhow = "1"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
dialoguer = "0.11"
console = "0.15"

[profile.release]
opt-level = 3
lto = true
strip = true
